--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 EMAIL_USER=iek.4ak@yandex.com
 EMAIL_PASSWORD=wgurtbaiptbolhey
-RECIPIENT_EMAIL=drcagriyapar@gmail.com
+RECIPIENT_EMAIL=info@drcagriyapar.com
 CORS_ORIGIN=*
